Fix: Post card top spacing issue

--- a/src/app/shared/post/post.component.scss
+++ b/src/app/shared/post/post.component.scss
@@ -53,7 +53,7 @@
   width: 100%;
   float: left;
   clear: both;
-  padding: 16px 24px;
+  padding: 16px 24px 0 24px;
   position: relative;
 }
 
